--- a/emacs/.spacemacs.d/spacemacs.org
+++ b/emacs/.spacemacs.d/spacemacs.org
@@ -5,64 +5,42 @@
 #+OPTIONS: toc:4 h:4
 #+PROPERTY: header-args:emacs-lisp :comments link
 
-* Introduction
-  This is a tangled user-init and user-config file for spacemacs. Place the
-  following code in your =~/.spacemacs.d/init.el= file.
-
-** init.el  
-   
-#+BEGIN_SRC emacs-lisp :tangle no
-  (defun dotspacemacs/user-init ()
-    ;; tangle without actually loading org
-    (let ((src (concat dotspacemacs-directory "spacemacs.org"))
-          (ui (concat dotspacemacs-directory "user-init.el"))
-          (uc (concat dotspacemacs-directory "user-config.el")))
-      (when (or (file-newer-than-file-p src ui) (file-newer-than-file-p src uc))
-        (call-process
-         (concat invocation-directory invocation-name)
-         nil nil t
-         "-q" "--batch" "--eval" "(require 'ob-tangle)"
-         "--eval" (format "(org-babel-tangle-file \"%s\")" src)))
-      (load-file ui)))
-
-  (defun dotspacemacs/user-config ()
-    (load-file (concat dotspacemacs-directory "user-config.el")))
-
-#+END_SRC
-
-** spacemacs.org  
-   
-To add configuration options before Spacemacs loads, insert the following kind
-of src block in your spacemacs.org file
-
+* 基本設定
+** 行番号を表示
 #+BEGIN_SRC emacs-lisp :tangle user-init.el
 (when (version<= "26.0.50" emacs-version )
   (global-display-line-numbers-mode))
 #+END_SRC
 
-Alternatively, if the block should be loaded after Spacemacs loads, insert the
-following test block
-
-#+BEGIN_SRC emacs-lisp :tangle user-config.el
+** 画面透過
+#+BEGIN_SRC emacs-lisp :tangle user-init.el
+(if window-system (progn
+    (set-frame-parameter nil 'alpha 90) ;透明度
+    ))
 #+END_SRC
 
-* Helper Functions
-
-** Yasnippet creation
-
-To help with creation of your text blocks, there are two snippets defined in the
-local snippet directory =~/.spacemacs.d/snippets/org-mode/= folder.
-
-To tangle to the =user-init= file, type =ui=, alternatively =uc= to tangle the =user-config= file.
-
-** Find this file
-   Create binding to spacemacs.org file
-
-#+BEGIN_SRC emacs-lisp :tangle user-config.el
-  (defun spacemacs/find-config-file ()
-    (interactive)
-    (find-file (concat dotspacemacs-directory "/spacemacs.org")))
-
-  (spacemacs/set-leader-keys "fec" 'spacemacs/find-config-file)
-
+** Emacs テーマ
+#+BEGIN_SRC emacs-lisp :tangle user-init.el
+(load-theme 'misterioso t)
 #+END_SRC
+
+* DDSKK日本語入力設定
+** MEPLA経由でDDSKKを追加する
+   - init.elに
+   #+BEGIN_EXAMPLE
+   dotspacemacs-additional-packages '(ddskk)
+   #+END_EXAMPLE
+   - を追加
+   - 参照：[[ https://www.spacemacs.org/doc/DOCUMENTATION.html#orgheadline21]]
+
+** DDSKKのデフォルト化とキーバインディング・句読点
+
+#+BEGIN_SRC emacs-lisp :tangle user-init.el
+(global-set-key "\C-x\C-j" 'skk-mode)
+(global-set-key "\C-xj" 'skk-auto-fill-mode)
+(global-set-key "\C-xt" 'skk-tutorial)
+
+(setq default-input-method "japanese-skk")
+
+(setq-default skk-kutouten-type 'jp-en)
+#+END_SRC 
