--- a/emacs/.spacemacs.d/spacemacs.org
+++ b/emacs/.spacemacs.d/spacemacs.org
@@ -4,33 +4,54 @@
 #+STARTUP: noindent
 #+OPTIONS: toc:4 h:4
 #+PROPERTY: header-args:emacs-lisp :comments link
+* Spacecmacsの設定をorg-modeで管理する
+** 参考にしたもの
+   - [[https://www.reddit.com/r/emacs/comments/7ntc6p/spacemacs_configuration_in_a_structured_orgmode/]]
+** .spacemacs.d/init.el
+以下を追加する。
+#+BEGIN_SRC emacs-lisp :tangle no
+(defun dotspacemacs/user-init ()
+;; tangle without actually loading org
+(let ((src (concat dotspacemacs-directory "spacemacs.org"))
+    (ui (concat dotspacemacs-directory "user-init.el"))
+    (uc (concat dotspacemacs-directory "user-config.el")))
+(when (or (file-newer-than-file-p src ui)
+          (file-newer-than-file-p src uc))
+  (call-process
+   (concat invocation-directory invocation-name)
+   nil nil t
+   "-q" "--batch" "--eval" "(require 'ob-tangle)"
+   "--eval" (format "(org-babel-tangle-file \"%s\")" src)))
+(load-file ui)))
 
+
+(defun dotspacemacs/user-config ()
+  (let ((uc (concat dotspacemacs-directory "user-config.el")))
+    (load-file uc)))
+#+END_SRC
 * 基本設定
 ** 行番号を表示
 #+BEGIN_SRC emacs-lisp :tangle user-init.el
 (when (version<= "26.0.50" emacs-version )
   (global-display-line-numbers-mode))
 #+END_SRC
-
 ** 画面透過
 #+BEGIN_SRC emacs-lisp :tangle user-init.el
 (if window-system (progn
     (set-frame-parameter nil 'alpha 90) ;透明度
     ))
 #+END_SRC
-
 ** Emacs テーマ
 #+BEGIN_SRC emacs-lisp :tangle user-init.el
 (load-theme 'misterioso t)
 #+END_SRC
-
-* DDSKK日本語入力設定
+* DDSKK
 ** MEPLA経由でDDSKKを追加する
-   - init.elに
-   #+BEGIN_EXAMPLE
-   dotspacemacs-additional-packages '(ddskk)
-   #+END_EXAMPLE
-   - を追加
+init.elに
+#+BEGIN_SRC emacs-lisp :tangle no
+dotspacemacs-additional-packages '(ddskk)
+#+END_SRC
+を追加
    - 参照：[[ https://www.spacemacs.org/doc/DOCUMENTATION.html#orgheadline21]]
 
 ** DDSKKのデフォルト化とキーバインディング・句読点
@@ -43,4 +64,10 @@
 (setq default-input-method "japanese-skk")
 
 (setq-default skk-kutouten-type 'jp-en)
-#+END_SRC 
+#+END_SRC
+* Org-mode
+** org-tempoを読み込む 
+#+BEGIN_SRC emacs-lisp :tangle user-config.el
+  (when (version<= "9.2" (org-version))
+   (require 'org-tempo))
+#+END_SRC
