--- a/emacs/.spacemacs.d/spacemacs.org
+++ b/emacs/.spacemacs.d/spacemacs.org
@@ -46,7 +46,7 @@
 ** spacemacs テーマ
 - [[https://themegallery.robdor.com/]]
 #+BEGIN_SRC emacs-lisp :tangle user-init.el
-  (setq-default dotspacemacs-themes '(deeper))
+  (setq-default dotspacemacs-themes '(deeper-blue))
 #+END_SRC
 * DDSKK
 - [[https://ddskk.readthedocs.io/ja/latest/index.html]]
