scheme モードを追加，行番号を表示する

--- a/emacs/.spacemacs.d/spacemacs.org
+++ b/emacs/.spacemacs.d/spacemacs.org
@@ -34,8 +34,7 @@
 * 基本設定
 ** 行番号を表示
     #+begin_src emacs-lisp :tangle user-init.el
-      (when (version<= "26.0.50" emacs-version )
-        (global-display-line-numbers-mode))
+      (global-linum-mode t)
     #+end_src
 ** 画面透過
     #+begin_src emacs-lisp :tangle user-init.el
